--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     </div>
     <div class="track-list">
       <ul>
-        <li id="skt" data-audio-src="music/skt_maseter.mp3">01. 空の彼方 / シャイニーカラーズ</li>
+        <li id="skt" data-audio-src="music/skt_master.mp3">01. 空の彼方 / シャイニーカラーズ</li>
         <li id="nhm" data-audio-src="music/nhm_master.mp3">02. 虹のはじまり / イルミネーションスターズ</li>
         <li id="moc" data-audio-src="music/moc_master.mp3">03. Messenger of Cumlonimbus / アンティーカ</li>
         <li id="fkr" data-audio-src="music/fkr_master.mp3">04. フシギ缶蹴リズム / 放課後クライマックスガールズ</li>
-        <li id="dms" data-audio-src="music/dms_maseter.mp3">05. ドリーミィ・ショー / アルストロメリア</li>
+        <li id="dms" data-audio-src="music/dms_master.mp3">05. ドリーミィ・ショー / アルストロメリア</li>
         <li id="adz" data-audio-src="music/adz_master.mp3">06. Accelerating Danger Zone / ストレイライト</li>
         <li id="its" data-audio-src="music/its_master.mp3">07. いつか飛ぶ空に / ノクチル</li> 
         <li id="cns" data-audio-src="music/cns_master.mp3">08. CAST NO SHADOW / シーズ</li>
